@@ -24,6 +24,7 @@
         * [BUGFIX]: #2718 Checkbox in CSV import plugin renamed to "Skip first row of data".
         * [BUGFIX]: Fixed staring edition of data in grid by pressing Enter key.
         * [BUGFIX]: #2745 Fixed crash when ctrl+right_clicking in SQL editor.
+        * [BUGFIX]: #2733 Fixed handling of foreign keys when changing table structure.
 
 [3.0.1]
         * [ADDED]: When the data is being read into the Gird View, columns width gets automatically adjusted, so for small values they are shrinked and for bigger values they're enlarged, but never above the configured limit (a new option in config dialog).
